--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form>
+	<h1>Login Form</h1>
+	<label>username: </label><input type="text" placeholder="Username" id="username"><br>
+	<label>password: </label><input type="password" placeholder="Password" id="password"><br>
+	<input type="checkbox" id="checkbox"><label>Remember me.</label><br><br>
+	<button type="submit" id="submit" value="submit">Submit</button>
 
+</form>
 </body>
 
 </html>
