--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 
 </html>
  -->
- <!DOCTYPE html>
+ <!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Login Form</title>
@@ -63,6 +63,55 @@
                 alert('Logged in as ' + savedUsername);
             });
         }
+    </script>
+</body>
+</html> -->
+
+<html>
+<head>
+    <title>Login Form</title>
+</head>
+<body>
+    <h1>Login Form</h1>
+    <form id="loginForm">
+        <input type="text" id="username" placeholder="Username"><br>
+        <input type="password" id="password" placeholder="Password"><br>
+        <input type="checkbox" id="checkbox"> Remember me<br>
+        <input type="submit" id="submit" value="Submit">
+    </form>
+
+    <script>
+        document.getElementById('submit').addEventListener('click', function(event) {
+            event.preventDefault();
+            var username = document.getElementById('username').value;
+            var password = document.getElementById('password').value;
+            var rememberMe = document.getElementById('checkbox').checked;
+
+            if (rememberMe) {
+                localStorage.setItem('username', username);
+                localStorage.setItem('password', password);
+            } else {
+                localStorage.removeItem('username');
+                localStorage.removeItem('password');
+            }
+            alert('Logged in as ' + username);
+
+            // Moved this code inside the submit event handler
+            if (localStorage.getItem('username')) {
+                var button = document.getElementById('existing');
+                if (!button) {
+                    button = document.createElement('button');
+                    button.id = 'existing';
+                    button.innerText = 'Login as existing user';
+                    document.body.appendChild(button);
+
+                    button.addEventListener('click', function() {
+                        var savedUsername = localStorage.getItem('username');
+                        alert('Logged in as ' + savedUsername);
+                    });
+                }
+            }
+        });
     </script>
 </body>
 </html>
