--- a/main.html
+++ b/main.html
@@ -80,7 +80,7 @@
         <input type="submit" id="submit" value="Submit">
     </form>
 
-    <script>
+    <!-- <script>
         document.getElementById('submit').addEventListener('click', function(event) {
             event.preventDefault();
             var username = document.getElementById('username').value;
@@ -112,6 +112,6 @@
                 });
             }
         }
-    </script>
+    </script> -->
 </body>
 </html>
