--- a/main.html
+++ b/main.html
@@ -80,38 +80,38 @@
         <input type="submit" id="submit" value="Submit">
     </form>
 
-    <!-- <script>
-        document.getElementById('submit').addEventListener('click', function(event) {
-            event.preventDefault();
-            var username = document.getElementById('username').value;
-            var password = document.getElementById('password').value;
-            var rememberMe = document.getElementById('checkbox').checked;
+    <script>
+		document.getElementById('submit').addEventListener('click', function(event) {
+	    event.preventDefault();
+	    var username = document.getElementById('username').value;
+	    var password = document.getElementById('password').value;
+	    var rememberMe = document.getElementById('checkbox').checked;
 
-            if (rememberMe) {
-                localStorage.setItem('username', username);
-                localStorage.setItem('password', password);
-            } else {
-                localStorage.removeItem('username');
-                localStorage.removeItem('password');
-            }
-            alert('Logged in as ' + username);
-        });
+    if (rememberMe) {
+        localStorage.setItem('username', username);
+        localStorage.setItem('password', password);
+    } else {
+        localStorage.removeItem('username');
+        localStorage.removeItem('password');
+    }
+    alert('Logged in as ' + username);
 
-        // Moved this code outside the submit event handler
-        if (localStorage.getItem('username')) {
-            var button = document.getElementById('existing');
-            if (!button) {
-                button = document.createElement('button');
-                button.id = 'existing';
-                button.innerText = 'Login as existing user';
-                document.body.appendChild(button);
+    // Check for existing user after login
+    if (localStorage.getItem('username')) {
+        var button = document.getElementById('existing');
+        if (!button) {
+            button = document.createElement('button');
+            button.id = 'existing';
+            button.innerText = 'Login as existing user';
+            document.body.appendChild(button);
 
-                button.addEventListener('click', function() {
-                    var savedUsername = localStorage.getItem('username');
-                    alert('Logged in as ' + savedUsername);
-                });
-            }
+            button.addEventListener('click', function() {
+                var savedUsername = localStorage.getItem('username');
+                alert('Logged in as ' + savedUsername);
+            });
         }
-    </script> -->
+    }
+});
+    </script>
 </body>
 </html>
