--- a/main.html
+++ b/main.html
@@ -6,8 +6,10 @@
 <body>
     <h1>Login Form</h1>
     <form id="loginForm">
+		<label for="username">Username:</label>
         <input type="text" id="username" placeholder="Username"><br>
-        <input type="password" id="password" placeholder="Password"><br>
+        <label for="password">Password:</label>
+		<input type="password" id="password" placeholder="Password"><br>
         <input type="checkbox" id="checkbox"> Remember me<br>
         <input type="submit" id="submit" value="Submit">
     </form>
