--- a/main.html
+++ b/main.html
@@ -7,10 +7,13 @@
     <h1>Login Form</h1>
     <form id="loginForm">
 		<label for="username">Username:</label>
-        <input type="text" id="username" placeholder="Username"><br>
-        <label for="password">Password:</label>
+		<input type="text" id="username" placeholder="Username"><br>
+
+		<label for="password">Password:</label>
 		<input type="password" id="password" placeholder="Password"><br>
-        <input type="checkbox" id="checkbox"> Remember me<br>
+
+		<label for="checkbox">Remember me:</label>
+		<input type="checkbox" id="checkbox"><br>
         <input type="submit" id="submit" value="Submit">
     </form>
 
